--- a/planeVsZombie/CMakeLists.txt
+++ b/planeVsZombie/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.23)
 project(planeVsZombie VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -12,6 +13,7 @@ find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
 qt_add_executable(appplaneVsZombie
     main.cpp
+    resources.qrc
 )
 
 qt_add_qml_module(appplaneVsZombie
@@ -29,6 +31,9 @@ qt_add_qml_module(appplaneVsZombie
     sunflower.qml
     pea.qml
     peashooter.qml
+    wallnut.qml
+    cherrybomb.qml
+    potatomine.qml
 )
 
 # auto add .h and .cpp for sources
